<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    tools:context="com.insane.lovish.informe.NewReportActivity">

    <LinearLayout
        android:id="@+id/activity_new_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <TextView
                android:id="@+id/report_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="2dp"
                android:paddingLeft="4dp"
                android:paddingRight="2dp"
                android:paddingStart="4dp"
                android:text="23 December 2016"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="(tentative)"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_border">

            <EditText
                android:id="@+id/report_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/enter_title"
                android:maxLines="2"
                android:textColor="#000000"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="18sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border"
                android:minHeight="200dp">

                <EditText
                    android:id="@+id/report_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:hint="@string/enter_description"
                    android:textColor="#000000"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_border">

            <TextView
                android:id="@+id/report_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/image"
                android:layout_toStartOf="@id/image"
                android:background="@color/textColor"
                android:ellipsize="end"
                android:hint="@string/select_category"
                android:maxLines="1"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:paddingStart="10dp"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/drop_down_icon"
                android:elevation="2dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_drop_down_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_border">

            <EditText
                android:id="@+id/report_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/enter_the_location"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>