<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f5f3f3"
    app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    tools:context="com.insane.lovish.informe.EmergencyContacts">

    <RelativeLayout
        android:id="@+id/activity_emergecy_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f3f3"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textColor="#000000"
            android:textSize="18sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/general_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/general">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/police"
                    layout="@layout/contact_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    android:id="@+id/ambulance"
                    layout="@layout/contact_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    android:id="@+id/firebrigade"
                    layout="@layout/contact_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/trusted_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/general_cards"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trusted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trusted"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="#43A047"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/add" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/contacts_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trusted_layout"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical" />

    </RelativeLayout>

</ScrollView>
